horovitzmic/homework/checkhw/submissions/37_lab03_209249564_319153755/compileerr.txt
./lab3/src/List.java:1: error: duplicate class: List
public interface List<T> {
       ^
./lab3/src/DListFactory.java:1: error: duplicate class: DListFactory
public class DListFactory<T> {
       ^
./lab3/src/ListTestObject.java:1: error: duplicate class: ListTestObject
public class ListTestObject extends ListTest<Object>{
       ^
3 errors
